--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,3 +38,11 @@ body {
   height: 100%;
   overflow: hidden;
 }
+
+/* Line clamp utilities */
+.line-clamp-3 {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+  overflow: hidden;
+}
