show prompts on chat

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,3 +46,10 @@ body {
   -webkit-line-clamp: 3;
   overflow: hidden;
 }
+
+.line-clamp-6 {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 6;
+  overflow: hidden;
+}
